--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Playing guitar lessons</title>
   </head>
   <body>
-    <div class="main-section">
+    <section class="main-section">
       <div class="container main-section__nav-container">
         <header class="main-section__header">
           <a href="#"><img src="/img/logo.svg" alt="Website logo" /></a>
@@ -75,7 +75,85 @@
       <div class="main-section__second-circle circle circle_big">
         <div class="circle__center circle__center_big"></div>
       </div>
-    </div>
+    </section>
+
+    <section class="second-section">
+      <div class="container second-section__container">
+        <h2 class="second-section__title title">
+          Teaching
+          <hr class="title__hr title__hr_long" />
+        </h2>
+        <div class="second-section__card-box">
+          <div class="second-section__card-item card-item">
+            <img
+              src="/img/g-1.png"
+              alt="A guitar photo"
+              class="card-item__img"
+            />
+            <p class="card-item__text">Electric <br />guitar</p>
+          </div>
+          <div class="second-section__card-item card-item card-item_orange">
+            <img
+              src="/img/g-2.png"
+              alt="A guitar photo"
+              class="card-item__img"
+            />
+            <p class="card-item__text">Acoustic <br />guitar</p>
+          </div>
+          <div class="second-section__card-item card-item card-item_blue">
+            <img
+              src="/img/g-3.png"
+              alt="A guitar photo"
+              class="card-item__img"
+            />
+            <p class="card-item__text">Ukulele <br />guitar</p>
+          </div>
+        </div>
+        <div class="second-section__icon-box icon-box">
+          <div class="second-section__icon-box-item icon-box-item">
+            <div class="icon-box__icon">
+              <img src="/img/icon-01.svg" alt="icon svg" />
+            </div>
+            <p class="icon-box__text">
+              <span>&nbsp;7</span><br />
+              years of teaching
+            </p>
+          </div>
+          <div class="second-section__icon-box-item icon-box-item">
+            <div class="icon-box__icon">
+              <img src="/img/icon-02.svg" alt="icon svg" />
+            </div>
+            <p class="icon-box__text">
+              <span>276</span><br />five star reviews
+            </p>
+          </div>
+          <div class="second-section__icon-box-item icon-box-item">
+            <div class="icon-box__icon">
+              <img src="/img/icon-03.svg" alt="icon svg" />
+            </div>
+            <p class="icon-box__text">
+              <span>314</span><br />
+              students graduated
+            </p>
+          </div>
+          <div class="second-section__icon-box-item icon-box-item">
+            <div class="icon-box__icon">
+              <img src="/img/icon-04.svg" alt="icon svg" />
+            </div>
+            <p class="icon-box__text">
+              <span>&nbsp;2000</span><br />&nbsp;&nbsp;hours of
+              &nbsp;&nbsp;teaching
+            </p>
+          </div>
+        </div>
+        <div class="second-section__first-circle circle">
+          <div class="circle__center circle__center_white"></div>
+        </div>
+        <div class="second-section__second-circle circle">
+          <div class="circle__center circle__center_white"></div>
+        </div>
+      </div>
+    </section>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
