--- a/index.html
+++ b/index.html
@@ -154,6 +154,45 @@
         </div>
       </div>
     </section>
+
+    <section class="third-section">
+      <div class="container third-section__container">
+        <div class="third-section__left-content">
+          <h3 class="third-section__left-title title">
+            Teaching
+            <hr class="title__hr title__hr_long" />
+          </h3>
+        </div>
+        <div class="third-section__right-content">
+          <h4 class="third-section__right-title title">
+            Preparing <br />
+            virtuosos
+            <hr class="title__hr title_right-hr" />
+          </h4>
+          <p class="third-section__text">
+            Everybody knows Eric Clapton. Some consider him the number-one or
+            two top player ever, and he's the only person to be inducted into
+            the Rock and Roll Hall of Fame three times. Even if you don't like
+            Clapton, you like his bands such as The Yardbirds, Cream, Blind
+            Faith, Derek and the Dominos, etc.
+          </p>
+          <div class="right__button buttons">
+            <button class="buttons__main-btn">
+              Book <br />
+              a lesson
+            </button>
+            <div class="right__icon-btn buttons__icon-btn">
+              <img src="/img/questions.svg" alt="Chat icon" />
+              <p class="buttons__text">Have <br />questions?</p>
+            </div>
+          </div>
+        </div>
+        <div class="third-section__second-circle circle circle_big">
+          <div class="circle__center circle__center_big"></div>
+        </div>
+        <img src="/img/Subtract.svg" alt="Svg image">
+      </div>
+    </section>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
