--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
             the Rock and Roll Hall of Fame three times. Even if you don't like
             Clapton, you like his bands such as The Yardbirds, Cream, Blind
             Faith, Derek and the Dominos, etc.
+            <br>
+            <br>
+            As well as being a prolific songwriter, a bona fide pop star and all-round game-changing icon, Prince was also rightly regarded as a formidable guitarist. You only have to hear the sweeping majesty of Purple Rain or the eye-popping shredding at the start of When Doves Cry to understand why.
           </p>
           <div class="right__button buttons">
             <button class="buttons__main-btn">
@@ -187,12 +190,42 @@
             </div>
           </div>
         </div>
-        <div class="third-section__second-circle circle circle_big">
+        <div class="third-section__first-circle circle circle_big">
           <div class="circle__center circle__center_big"></div>
         </div>
-        <img src="/img/Subtract.svg" alt="Svg image">
+        <img class="third-section__figure" src="/img/Subtract.svg" alt="Svg image">
       </div>
+      <div class="third-section__second-circle circle circle_big">
+          <div class="circle__center circle__center_big"></div>
+        </div>
     </section>
+
+    <footer class="footer">
+      <div class="container footer__container">
+        <img class="footer__img" src="/img/Guitar neck.png" alt="A guitar neck">
+        <div class="footer__footer-wrapper">
+          <h5 class="third-section__right-title title">
+            Preparing <br />
+            virtuosos
+          <hr class="title__hr title_right-hr" />
+          </h5>
+          <div class="footer__icons-box icons" icons>
+            <div class="icons__item">
+              <ion-icon name="logo-skype"></ion-icon>
+            </div>
+            <div class="icons__item">
+              <ion-icon name="logo-whatsapp"></ion-icon>
+            </div>
+            <div class="icons__item">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </div>
+            <div class="icons__item">
+              <ion-icon name="logo-youtube"></ion-icon>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
