--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,600&display=swap" rel="stylesheet" />
     <link rel="icon" href="/img/logo.png" />
     <!-- <link rel="stylesheet" href="/css/reset.css" /> -->
     <!-- <link rel="stylesheet" href="/css/normalize.css" /> -->
@@ -20,9 +21,9 @@
         </header>
         <nav class="main-section__nav nav-menu">
           <ul class="nav-menu__list">
-            <li class="nav-menu__item">About me</li>
-            <li class="nav-menu__item">Lessons</li>
-            <li class="nav-menu__item">Sign in</li>
+            <li class="nav-menu__item"><a href="#about-me">About me</a></li>
+            <li class="nav-menu__item"><a href="#lessons">Lessons</a></li>
+            <li class="nav-menu__item"><a href="#">Sign in</a></li>
           </ul>
         </nav>
       </div>
@@ -77,7 +78,7 @@
       </div>
     </section>
 
-    <section class="second-section">
+    <section id="about-me" class="second-section">
       <div class="container second-section__container">
         <h2 class="second-section__title title">
           Teaching
@@ -155,7 +156,7 @@
       </div>
     </section>
 
-    <section class="third-section">
+    <section id="lessons" class="third-section">
       <div class="container third-section__container">
         <div class="third-section__left-content">
           <h3 class="third-section__left-title title">
@@ -205,9 +206,9 @@
         <img class="footer__img" src="/img/Guitar neck.png" alt="A guitar neck">
         <div class="footer__footer-wrapper">
           <h5 class="third-section__right-title title">
-            Preparing <br />
-            virtuosos
-          <hr class="title__hr title_right-hr" />
+            Book a free <br />
+            lesson
+          <hr class="title__hr title_footer-hr" />
           </h5>
           <div class="footer__icons-box icons" icons>
             <div class="icons__item">
