--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <section class="main-section">
       <div class="container main-section__nav-container">
-        <header class="main-section__header">
-          <a href="#"><img src="/img/logo.svg" alt="Website logo" /></a>
+        <header class="main-section__header header">
+          <a class="header__link" href="#"><img class="header__img" src="/img/logo.svg" alt="Website logo" /></a>
         </header>
         <nav class="main-section__nav nav-menu">
           <ul class="nav-menu__list">
