--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   </head>
   <body>
     <section class="main-section">
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <div class="container main-section__nav-container">
         <header class="main-section__header header">
           <a class="header__link" href="#"><img class="header__img" src="/img/logo.svg" alt="Website logo" /></a>
